--- a/OpenCase/RUS/open.html
+++ b/OpenCase/RUS/open.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" type="text/css" href="../css/main.css">
 <link rel="stylesheet" type="text/css" href="../css/rarity.css">
 <link rel="stylesheet" type="text/css" href="../css/fonts.css">
+<link rel="stylesheet" type="text/css" href="../css/buttons.css">
 </head>
 <body data-localization="openCase" data-inventory="no-load">
 
@@ -36,6 +37,14 @@
 <span class="win_quality"></span>
 <span class="win_price"></span>
 <img src="" class="win_img">
+<div class="win_sell_div">
+	<h3 id="win_sell_text" class="lines"><span>Продать</span></h3>
+	<div class="corner_holder">
+		<button class="button_glass with_icon double_icon" id="double_sell_button"></button>
+		<span class="corner_left"></span>
+		<span class="corner_right"></span>
+	</div>
+</div>
 </div>
 
 <button class="openCase">Открыть кейс</button>
