--- a/OpenCase/RUS/RPS.html
+++ b/OpenCase/RUS/RPS.html
@@ -24,8 +24,9 @@
 
 </head>
 <body data-localization='rps'>
+<div class="site-overlay"></div>
+<div id='container' class="container">
 <div class="navigationBar" data-menu-EN="RPS Battle" data-menu-RU="Камень-ножницы-бумага"></div>
-<div class='container'>
 	<div class='battle-field'>
 		<div class='round-count'></div>
 		<div class='hand left' id='js-left-hand'><img src='../images/rps/rock.png' id='js-player-img'></div>
@@ -55,7 +56,6 @@
 	</div>
 
 </div>
-<!-- <script src="../scripts/rulet.js"></script> -->
 <script src="../scripts/rps.js"></script>
 </body>
 </html>
