--- a/OpenCase/RUS/coinflip.html
+++ b/OpenCase/RUS/coinflip.html
@@ -28,8 +28,9 @@
 
 </head>
 <body data-localization='coinflip'>
+	<div class="site-overlay"></div>
+<div class='container' id="container">
 <div class="navigationBar" data-menu-EN="Coinflip" data-menu-RU="Монетка"></div>
-<div class='container'>
 	<table class='games'>
 		<tr><th id='local-table-players'>Игроки</th><th id='local-table-items'>Предметы</th><th colspan=2 id='local-table-total'>Стоимость</th></tr>
 		<tr id='js-table-loading-gif'><td colspan =4><div class="cssload-container"><div class="cssload-speeding-wheel"></div></div></td></tr>
