--- a/OpenCase/RUS/double.html
+++ b/OpenCase/RUS/double.html
@@ -33,7 +33,8 @@
 </head>
 
 <body data-localization="double" data-inventory='no-load'>
-<div id="containter">
+	<div class="site-overlay"></div>
+<div id="container">
 <div class="navigationBar" data-menu-EN="Double" data-menu-RU="Дабл"></div>
 <span id='last_games_text' class='margin-left-body'>Previous numbers:</span>
 <div class='last-games'></div>
