--- a/OpenCase/RUS/faq.html
+++ b/OpenCase/RUS/faq.html
@@ -20,13 +20,8 @@
 		body {
 		color: #fff;
 		}
-		.container {
-		padding: 0 10px;
-		font-family: LatoRegular;
-		margin-top: 48px;
-		}
 		ul.faq-list {
-		padding-left: 0;
+		padding: 0 10px;
 		list-style: none;
 		}
 		.faq-list li {
@@ -53,8 +48,9 @@
 	</style>
 	</head>
 	<body data-localization='faq'>
+		<div class="site-overlay"></div>
+		<div id='container'>
 		<div class="navigationBar" data-menu-EN="FAQ" data-menu-RU="FAQ"></div>
-		<div class='container'>
 			<ul class='faq-list'>
 				<li>
 					<span class='question' id='js-local-question-1'>Как играть в рулетку?</span>
