--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -16,14 +16,12 @@
 <title>О программе</title>
 </head>
 <body data-localization="about">
-<div class="navigationBar" data-menu-EN="About" data-menu-RU="О программе"></div>
 <style>
 body {
 margin: 2px;
 color: #fff;
 }
-.container {
-    margin-top: 50px;
+#about {
     background: #373B41;
     padding: 0 10px 10px 10px;
     border: 1px solid #fff;
@@ -43,7 +41,10 @@ li b {
     color: #deb61d;
 }
 </style>
-<div class="container">
+<div class="site-overlay"></div>
+<div id="container">
+<div class="navigationBar" data-menu-EN="About" data-menu-RU="О программе"></div>
+<div id="about">
 <h3><span id='developer'>Главный разработчик</span></h3>
 VLADOS776<br>
 <ul>
@@ -62,6 +63,7 @@ VLADOS776<br>
 <h3><span id='copyright'>Авторские права</span></h3>
 <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
 <p id='secret' style='display:none'><a href='spinking.html'>Spinking</a></p>
+</div>
 </div>
 <script>
 	if (Player.nickname == 'VLADOS776') $("#secret").css('display', 'block')
