--- a/OpenCase/RUS/apps.html
+++ b/OpenCase/RUS/apps.html
@@ -19,12 +19,10 @@
 		body {
 		color: #fff;
 		}
-		.container {
-		margin-top: 40px;
-		}
 		.apps {
 		list-style: none;
 		padding: 0;
+		margin: 0;
 		}
 		.apps li {
 		height: 125px;
@@ -46,8 +44,9 @@
 		}
 	</style>
 	<body data-localization='apps'>
-		<div class="navigationBar" data-menu-EN="Other apps" data-menu-RU="Другие приложения"></div>
-		<div class='container'>
+		<div class="site-overlay"></div>
+		<div id='container'>
+			<div class="navigationBar" data-menu-EN="Other apps" data-menu-RU="Другие приложения"></div>
 			<ul class='apps'>
 
 			</ul>
