--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -20,6 +20,8 @@
 <script src="../scripts/localization.js"></script>
 </head>
 <body data-localization="cases" data-inventory="no-load">
+	<div class="site-overlay"></div>
+	<div id="container">
 <div class="navigationBar" data-menu-EN="Open Cases" data-menu-RU="Открыть кейсы"></div>
 
 <div class="popup" id="special-popup">
@@ -34,12 +36,12 @@
 <span id='js-local-rank-text'>Только игроки с рангом</span> <span id='rank'>?</span> <span id='js-local-rank-text2'> и выше могут открыть этот кейс.</span><br><a href="faq.html#js-local-question-rank" class="inline-link"><span id='js-local-rank-text3'>Как поднять ранг?</span></a>
 </div>
 <div class="cases">
-<div id="Default"><h1>Кейсы</h1></div>
-<div id="eSports"><h1>eSports</h1></div>
-<div id="Collection"><h1>Коллекции</h1></div>
-<div id="Souvenir"><h1>Сувенирные коллекции</h1></div>
-<div id="Workshop"><h1>Мастерская</h1></div>
-<div id="Special"><h1>Особые</h1></div>
+<div id="Default" class="casesBlock opened"><h1>Кейсы</h1></div>
+<div id="eSports" class="casesBlock closed"><h1>eSports</h1></div>
+<div id="Collection" class="casesBlock closed"><h1>Коллекции</h1></div>
+<div id="Souvenir" class="casesBlock closed"><h1>Сувенирные коллекции</h1></div>
+<div id="Workshop" class="casesBlock closed"><h1>Мастерская</h1></div>
+<div id="Special" class="casesBlock closed"><h1>Особые</h1></div>
 </div>
 <script>
 
@@ -53,9 +55,6 @@ $(function () {
 		case "Default":
 			$("#Default").append(curCase);
 			break;
-		/*case "Souvenir":
-			$("#Souvenir").append(curCase);
-			break;*/
 		case "eSports":
 			$("#eSports").append(curCase);
 			break;
@@ -133,4 +132,4 @@ $('#showVideoAd').on('click', function () {
 
 });
 </script>
-</body></html>
+</div></body></html>
