--- a/OpenCase/RUS/rulet.html
+++ b/OpenCase/RUS/rulet.html
@@ -29,7 +29,8 @@
 
 </head>
 <body data-localization="jackpot" data-inventory='no-load'>
-<div id="containter">
+	<div class="site-overlay"></div>
+<div id="container">
 <div class="navigationBar" data-menu-EN="Jackpot" data-menu-RU="Джекпот"></div>
 <div id="circle"></div>
 <div id="status"></div>
