--- a/OpenCase/RUS/spinking.html
+++ b/OpenCase/RUS/spinking.html
@@ -1,4 +1,5 @@
-﻿<html>
+<!DOCTYPE html>
+<html>
 <head>
 <title>SpinKing</title>
 <!-- Стили -->
@@ -31,7 +32,8 @@
 
 </head>
 <body data-localization="spinking" data-inventory='no-load'>
-<div id="containter">
+<div class="site-overlay"></div>
+<div id="container">
 <div class="navigationBar" data-menu-EN="Spinking" data-menu-RU="Spinking"></div>
 
 <div class="scrollerContainer">
