Special Thanks Sinon

--- a/OpenCase/RUS/about.html
+++ b/OpenCase/RUS/about.html
@@ -59,6 +59,7 @@ VLADOS776<br>
 <ul>
 <li>Death Reaper</li>
 <li>misha4burn</li>
+<li>Sinon</li>
 </ul>
 <h3><span id='copyright'>Авторские права</span></h3>
 <p id='local-4'>Вся информация взята из открытых источников. Если что-либо в приложении нарушает ваши авторские права, свяжитесь со мной.</p>
