--- a/OpenCase/RUS/inventory.html
+++ b/OpenCase/RUS/inventory.html
@@ -150,6 +150,7 @@
 					$('.button_contract').prop('disabled', true);
 				return false;
 			}
+			$(".fullWeaponInfo button").prop("disabled", false);
 			var name = $(this).data("name");
 			var type = $(this).data("type");
 			var img = $(this).data("img");
@@ -227,15 +228,25 @@
 			var statTrak = $("#weaponInfoContainer").data("stattrak") == true;
 			var quality = $("#weaponQuality").text();
 			var price = parseFloat($('#weaponPrice').text());
+
+			$('#weaponPrice').html('<span class="current-price hide">' + $('#weaponPrice').html() + '</span><span class="loading-animate"><i class="fa fa-refresh fa-spin" aria-hidden="true"></span>');
+
+			$(".fullWeaponInfo button").prop("disabled", true);
+
+			var search = true;
 			if (price == 0) {
 				price = getPrice(type, name, quality, statTrak);
-				if (price == 0 && !isNaN(price))
-					getMarketPrice(type, name, quality, statTrak, '#weaponPrice');
+				search = false;
+			}
+
+			if (search)
+					getMarketPrice(type, name, quality, statTrak, function(pr){
+						$('#weaponPrice').text(pr + '$');
+						$(".fullWeaponInfo button").prop("disabled", false);
+					});
 				else
 					$('#weaponPrice').text(price + '$');
-			} else {
-				getMarketPrice(type, name, quality, statTrak, '#weaponPrice');
-			}
+
 			$(".glassBlur").addClass("savePrice");
 		});
 
