--- a/OpenCase/RUS/cases.html
+++ b/OpenCase/RUS/cases.html
@@ -78,7 +78,7 @@ $(function () {
 
 		var version = client.getCurrentAppVersionName();
 
-		if (version != "1.3") {
+		if (version != "1.4") {
 			$('body').append('<div class="new-version"><b>' + Localization.cases2['new_version'][Settings.language] + '</b><span class="new-version__button" id="new-version__later">' + Localization.cases2['new_version_button_later'][Settings.language] + '</span><span class="new-version__button" id="new-version__update">' + Localization.cases2['new_version_button_update'][Settings.language] + '</span></div>');
 		}
 	}
@@ -129,7 +129,25 @@ $('#showVideoAd').on('click', function () {
 	else {
 		window.location = "open.html?caseId=" + $('.js-secretField').text() + '&fromAd=1';
 	}
-
 });
+
+/*window.addEventListener('popstate', function(event) {
+    // The popstate event is fired each time when the current history entry changes.
+
+    var r = confirm("You pressed a Back button! Are you sure?!");
+
+    if (r == true) {
+        // Call Back button programmatically as per user confirmation.
+        history.back();
+        // Uncomment below line to redirect to the previous page instead.
+        // window.location = document.referrer
+    } else {
+        // Stay on the current page.
+        history.pushState(null, null, window.location.pathname);
+    }
+
+    history.pushState(null, null, window.location.pathname);
+
+}, false);*/
 </script>
 </div></body></html>
