--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -11,13 +11,10 @@
 <!-- Firebase -->
 <script src="https://www.gstatic.com/firebasejs/3.3.0/firebase.js"></script>
 
-<!-- Firechat -->
-<!-- <link rel="stylesheet" href="https://cdn.firebase.com/libs/firechat/3.0.1/firechat.min.css" /> -->
-<!-- <script src="https://cdn.firebase.com/libs/firechat/3.0.1/firechat.min.js"></script> -->
-
 <script src="../scripts/jquery.cookie.js"></script>
 <script src="../scripts/main.js"></script>
 <script src="../scripts/settings.js"></script>
+<script src="../scripts/chat.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
@@ -30,105 +27,7 @@
 <div class='container' id="container">
 <div class="navigationBar" data-menu-EN="Chat" data-menu-RU="Чат"></div>
 
- <script>
- var config = {
-    apiKey: "AIzaSyBnT4uYoOgs0Gl6F5_AtzY-q9hhM8z__E4",
-    authDomain: "admob-app-id-8282025074.firebaseapp.com",
-    databaseURL: "https://admob-app-id-8282025074.firebaseio.com",
-    storageBucket: "admob-app-id-8282025074.appspot.com",
-    messagingSenderId: "917984410977"
-  };
-  firebase.initializeApp(config);
-  var testObject = {};
-  var chatRef = firebase.database().ref('globalChat');
-	  
-	  function register() {
-		var email = $("#email").val() || "";
-		var password = $("#password").val() || "";
-		if (email == "" || password == "") {
-			return false;
-		}
-		
-		firebase.auth().createUserWithEmailAndPassword(email, password).catch(function (error) {
-			var errorCode = error.code;
-			var errorMessage = error.message;
-			
-			console.log("Error! ",error.message);
-		})
-	  }
-	  
-	chatRef.on('child_added', function(data) {
-		newMsg(data.val().uid, data.val().img, data.val().username, data.val().time, data.val().text);
-	});
-	  
-	  function login() {
-		var email = $("#email").val() || "";
-		var password = $("#password").val() || "";
-		if (email == "" || password == "") {
-			return false;
-		}
-		
-		firebase.auth().signInWithEmailAndPassword(email, password).catch(function(error) {
-			var errorCode = error.code;
-			var errorMessage = error.message;
-			
-			console.log("Error! ",error.message);
-		});
-	  }
-
-      firebase.auth().onAuthStateChanged(function(user) {
-        // Once authenticated, instantiate Firechat with the logged in user
-      });
-
-      function sendChatMessage(userName, text, img) {
-		var time = new Date();
-		time = ""+time;
-		var uid = firebase.auth().currentUser.uid;
-		chatRef.push({
-			username: userName,
-			uid: uid,
-			text: text,
-			time: time,
-			img: img
-		});
-	  }
-	  
-	  function newMsg(uid, img, username, time, text) {
-			var time = new Date(time);
-			time = time.toLocaleString((Settings.language == 'RU') ? 'ru' : 'en-US', {hour: 'numeric', minute: 'numeric'});
-			var myMessage = false;
-			
-			if (uid == firebase.auth().currentUser.uid)
-				myMessage = true;
-			
-			var msg = "<li class='chat__message" + (myMessage ? " my_message" : "") + "' data-userID='"+uid+"'>" +
-					"<img src='"+img+"'>" +
-					"<div class='message__info'>" +
-					"<div class='message__info__from-time'>" +
-					"<span class='message__from'>"+username+"</span>" +
-					"<span class='message__time'>"+time+"</span>" +
-					"</div>"+
-					"<span class='message__text'>"+text+"</span>" +
-					"</div></li>";
-				$(".chat__messages").append(msg);
-	  }
-	  
-	  /*function initChat() {
-		return chatRef.once('value').then(function(snapshot) {
-			messages = snapshot.val();
-			for (key in messages) {
-				newMsg(messages[key].uid, messages[key].img, messages[key].username, messages[key].time, messages[key].text);
-			}
-		});
-	  }
-	  
-	  $(function() {
-		initChat();
-	  });*/
-    </script>
-
-    <div id="firechat-wrapper">
-		<div id="login">
+    <div id="login" style='display: none;'>
 			<input type="text" placeholder="Email" id="email"></input>
 			<input type="password" placeholder="Password" id="password"></input>
 			<div id="login__buttons">
@@ -136,13 +35,12 @@
 				<button class="button_blue" onclick="register();">Register</button>
 			</div>
 		</div>
-	</div>
-	
+
 	<div id="chat">
 		<ul class="chat__messages">
 		</ul>
 		<div class="chat__write">
-			<input type="text" id="chat__new-message" />
+			<div class="input-text" contenteditable="true" id="chat__new-message" max="120"></div>
 			<input class="button_blue" type="button" id="chat__send-new-message" value="Send" />
 		</div>
 	</div>
