--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="../css/animate.css">
 <link rel="stylesheet" type="text/css" href="../css/chat.css">
 <link rel="stylesheet" type="text/css" href="../css/buttons.css">
+<link rel="stylesheet" type="text/css" href="../css/loading.css">
 
  <script src="../scripts/jquery.min.js"></script>
 <!-- Firebase -->
