--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -14,8 +14,10 @@
 
 <script src="../scripts/jquery.cookie.js"></script>
 <script src="../scripts/main.js"></script>
+<script src="../scripts/profile.js"></script>
 <script src="../scripts/settings.js"></script>
 <script src="../scripts/chat.js"></script>
+<script src="../scripts/weapons.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
 <link rel="stylesheet" href="../css/navigationMenu.css">
@@ -45,6 +47,7 @@
 			<input class="button_blue" type="button" id="chat__send-new-message" value="Send" />
 		</div>
 	</div>
+
 </div>
 </body>
 </html>
