--- a/OpenCase/RUS/chat.html
+++ b/OpenCase/RUS/chat.html
@@ -16,7 +16,9 @@
 <script src="../scripts/main.js"></script>
 <script src="../scripts/profile.js"></script>
 <script src="../scripts/settings.js"></script>
+<script src="../scripts/skinNames.js"></script>
 <script src="../scripts/chat.js"></script>
+<script src="../scripts/cases2.js"></script>
 <script src="../scripts/weapons.js"></script>
 
 <script src="../scripts/navigationMenu.js"></script>
