--- a/OpenCase/RUS/profile.html
+++ b/OpenCase/RUS/profile.html
@@ -153,6 +153,7 @@ ul.posts__user-posts {
 }
 .post__header__img {
     width: 50px;
+		height: 50px;
     border-radius: 50%;
     align-items: center;
 }
